--- a/agent_deploy/kubernetes/sysdig-agent-daemonset-v1.yaml
+++ b/agent_deploy/kubernetes/sysdig-agent-daemonset-v1.yaml
@@ -21,6 +21,10 @@ spec:
       - name: modprobe-d
         hostPath:
           path: /etc/modprobe.d
+      - name: etc-version
+        hostPath:
+          path: /etc/VERSION
+          type: FileOrCreate
       - name: dshm
         emptyDir:
           medium: Memory
@@ -95,6 +99,9 @@ spec:
         volumeMounts:
         - mountPath: /etc/modprobe.d
           name: modprobe-d
+          readOnly: true
+        - mountPath: /host/etc/VERSION
+          name: etc-version
           readOnly: true
         - mountPath: /host/dev
           name: dev-vol
