--- a/agent_deploy/kubernetes/sysdig-agent-daemonset-v2.yaml
+++ b/agent_deploy/kubernetes/sysdig-agent-daemonset-v2.yaml
@@ -25,6 +25,10 @@ spec:
         hostPath:
           path: /etc/os-release
           type: FileOrCreate
+      - name: etc-version
+        hostPath:
+          path: /etc/VERSION
+          type: FileOrCreate
       - name: dshm
         emptyDir:
           medium: Memory
@@ -98,6 +102,9 @@ spec:
         volumeMounts:
         - mountPath: /etc/modprobe.d
           name: modprobe-d
+          readOnly: true
+        - mountPath: /host/etc/VERSION
+          name: etc-version
           readOnly: true
         - mountPath: /host/dev
           name: dev-vol
