--- a/agent_deploy/kubernetes/sysdig-agent-slim-daemonset-v1.yaml
+++ b/agent_deploy/kubernetes/sysdig-agent-slim-daemonset-v1.yaml
@@ -21,6 +21,10 @@ spec:
       - name: modprobe-d
         hostPath:
           path: /etc/modprobe.d
+      - name: etc-version
+        hostPath:
+          path: /etc/VERSION
+          type: FileOrCreate
       - name: dshm
         emptyDir:
           medium: Memory
@@ -68,6 +72,9 @@ spec:
           limits:
             memory: 512Mi
         volumeMounts:
+        - mountPath: /host/etc/VERSION
+          name: etc-version
+          readOnly: true
         - mountPath: /host/boot
           name: boot-vol
           readOnly: true
